Use GST_TAG_DATE_TIME to set 'year' tag

GStreamer tagging elements only consider the GST_TAG_DATE_TIME and don't
do anything with the GST_TAG_DATE tag sound-juicer was trying to set.

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=693048